added new section

--- a/index.html
+++ b/index.html
@@ -37,5 +37,106 @@
             </div>
         </nav>
     </header>
+    <section>
+        <div class="container">
+            <div class="cards flex">
+                <div class="card_we">
+                    <div class="flip-box">
+                        <div class="card_img">
+                            <div class="card_imgin"><img src="goha.jpg" alt=""></div>
+                            <h3 class="card_tit">Гуланда Токонова</h3>
+                            <div class="inner color-white"></div>
+                        </div>
+                        <div class="info">
+                            <div class="card_txt">Привет, меня  зовут Гуланда Токонова . Мне 16 хоть я и заканчиваю 11 класс. Учусь в лицее имени Токтогула Сатылганова , на профиле физмат. Увлекаюсь рисованием, вязанием , волейболом и т.д .  Люблю смотреть аниме , особенно полнометражные .
+
+                            </div>
+                            <div class="inner color-white">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card_we">
+                    <div class="flip-box">
+                        <div class="card_img">
+                            <div class="card_imgin"><img src="мен.jpg" alt=""></div>
+                            <h3 class="card_tit">Седеп Эликбаева</h3>
+                            <div class="inner color-white"></div>
+                        </div>
+                        <div class="info">
+                            <div class="card_txt">
+                                Привет, меня зовут Седеп. Мне 16  тоже учусь в лицее имени Токтогула Сатылганова в 10 классе, на профиле физмат. Увлекаюсь рисованием, волейболом, чтением книг и IT.
+                                Здесь я писала js код. все что связано с js работа моя
+
+                            </div>
+                            <div class="inner color-white">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card_we">
+                    <div class="flip-box">
+                        <div class="card_img">
+                            <div class="card_imgin"><img src="сырдыкан.jpg" alt=""></div>
+                            <h3 class="card_tit">Сырдыкан Апарова</h3>
+                            <div class="inner color-white"></div>
+                        </div>
+                        <div class="info">
+                            <div class="card_txt">
+                                jugyftdrszvbhjkhgyftd
+                            </div>
+                            <div class="inner color-white">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card_we">
+                    <div class="flip-box">
+                        <div class="card_img">
+                            <div class="card_imgin"><img src="ранель.jpg" alt=""></div>
+                            <h3 class="card_tit">Ранель Карымшакова</h3>
+                            <div class="inner color-white"></div>
+                        </div>
+                        <div class="info">
+                            <div class="card_txt"></div>
+                            <div class="inner color-white">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card_we">
+                    <div class="flip-box">
+                        <div class="card_img">
+                            <div class="card_imgin"><img src="lola.jpg" alt=""></div>
+                            <h3 class="card_tit">Лола Гапарова</h3>
+                            <div class="inner color-white"></div>
+                        </div>
+                        <div class="info">
+                            <div class="card_txt">
+                                jugyftdrszvbhjkhgyftd
+                            </div>
+                            <div class="inner color-white">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card_we">
+                    <div class="flip-box">
+                        <div class="card_img">
+                            <div class="card_imgin"><img src="ajareje.jpg" alt=""></div>
+                            <h3 class="card_tit">Ажара эже</h3>
+                            <div class="inner color-white"></div>
+                        </div>
+                        <div class="info">
+                            <div class="card_txt">
+                                jugyftdrszvbhjkhgyftd
+                            </div>
+                            <div class="inner color-white">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
 </body>
 </html>
