--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="card_we">
                     <div class="flip-box">
                         <div class="card_img">
-                            <div class="card_imgin"><img src="goha.jpg" alt=""></div>
+                            <div class="card_imgin"><img src="img/goha.jpg" alt=""></div>
                             <h3 class="card_tit">Гуланда Токонова</h3>
                             <div class="inner color-white"></div>
                         </div>
@@ -59,7 +59,7 @@
                 <div class="card_we">
                     <div class="flip-box">
                         <div class="card_img">
-                            <div class="card_imgin"><img src="мен.jpg" alt=""></div>
+                            <div class="card_imgin"><img src="img/мен.jpg" alt=""></div>
                             <h3 class="card_tit">Седеп Эликбаева</h3>
                             <div class="inner color-white"></div>
                         </div>
@@ -77,7 +77,7 @@
                 <div class="card_we">
                     <div class="flip-box">
                         <div class="card_img">
-                            <div class="card_imgin"><img src="сырдыкан.jpg" alt=""></div>
+                            <div class="card_imgin"><img src="img/сырдыкан.jpg" alt=""></div>
                             <h3 class="card_tit">Сырдыкан Апарова</h3>
                             <div class="inner color-white"></div>
                         </div>
@@ -93,7 +93,7 @@
                 <div class="card_we">
                     <div class="flip-box">
                         <div class="card_img">
-                            <div class="card_imgin"><img src="ранель.jpg" alt=""></div>
+                            <div class="card_imgin"><img src="img/ранель.jpg" alt=""></div>
                             <h3 class="card_tit">Ранель Карымшакова</h3>
                             <div class="inner color-white"></div>
                         </div>
@@ -107,7 +107,7 @@
                 <div class="card_we">
                     <div class="flip-box">
                         <div class="card_img">
-                            <div class="card_imgin"><img src="lola.jpg" alt=""></div>
+                            <div class="card_imgin"><img src="img/lola.jpg" alt=""></div>
                             <h3 class="card_tit">Лола Гапарова</h3>
                             <div class="inner color-white"></div>
                         </div>
@@ -123,7 +123,7 @@
                 <div class="card_we">
                     <div class="flip-box">
                         <div class="card_img">
-                            <div class="card_imgin"><img src="ajareje.jpg" alt=""></div>
+                            <div class="card_imgin"><img src="img/ajareje.jpg" alt=""></div>
                             <h3 class="card_tit">Ажара эже</h3>
                             <div class="inner color-white"></div>
                         </div>
