--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <div class="inner color-white"></div>
                         </div>
                         <div class="info">
-                            <div class="card_txt">Привет, меня  зовут Гуланда Токонова . Мне 16 хоть я и заканчиваю 11 класс. Учусь в лицее имени Токтогула Сатылганова , на профиле физмат. Увлекаюсь рисованием, вязанием , волейболом и т.д .  Люблю смотреть аниме , особенно полнометражные .
+                            <div class="card_txt">Привет, меня  зовут Гуланда Токонова . Мне 16 хоть я и заканчиваю 11 класс. Учусь в лицее имени Токтогула Сатылганова , на профиле физмат. Увлекаюсь рисованием, вязанием , волейболом и т.д .  Люблю смотреть аниме , особенно полнометражные.`  
 
                             </div>
                             <div class="inner color-white">
