i added new section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,32 @@
             </div>
         </nav>
     </header>
+    <section class="main">
+        <div class="container">
+            <div class="eot_main flex">
+                <div class="main_right">
+                    <div class="main_txt">
+                        <h1>
+                            <h2 class="tit">Отдавай чтобы</h2>
+                              <p class="txt">получать эмоции,</p>
+                              <p class="txt">получать нужные вещи,</p>
+                              <p class="txt">меняться и менять мир,</p>
+                              <p class="txt">получать подарки от партнеров.</p>
+                    </div>
+                    <div class="main_btn flex">
+                        <a href="#" class="btn btn__eot">отдать</a>
+                        <a href="#" class="btn btn__eot">забрать</a>
+                    </div>
+                </div>
+                <div class="main_left">
+                    <div class="main_img">
+                        <img src="img/eot__main.webp" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section>
         <div class="container">
             <div class="cards flex">
