--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700,&display=swap"
+    rel="stylesheet">
+    <link
+    href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Caveat:wght@400..700&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Cormorant+Infant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100..900&family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Pacifico&family=Poiret+One&family=Reenie+Beanie&family=Roboto+Condensed&family=Rouge+Script&family=Rubik+Bubbles&display=swap"
+    rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
 <body>
@@ -42,7 +47,6 @@
             <div class="eot_main flex">
                 <div class="main_right">
                     <div class="main_txt">
-                        <h1>
                             <h2 class="tit">Отдавай чтобы</h2>
                               <p class="txt">получать эмоции,</p>
                               <p class="txt">получать нужные вещи,</p>
@@ -50,8 +54,8 @@
                               <p class="txt">получать подарки от партнеров.</p>
                     </div>
                     <div class="main_btn flex">
-                        <a href="#" class="btn btn__eot">отдать</a>
-                        <a href="#" class="btn btn__eot">забрать</a>
+                        <a href="#" class="btn btn__eot"><span>отдать</span></a>
+                        <a href="#" class="btn btn__eot"><span>забрать</span></a>
                     </div>
                 </div>
                 <div class="main_left">
