added style in header

--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
             </div>
         </nav>
     </header>
+    <button id="openModal">Отправить сообщение</button>
+
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h2>Отправить сообщение</h2>
+    <form>
+      <label for="message">Сообщение:</label><br>
+      <textarea id="message" name="message" rows="4" cols="50"></textarea><br>
+      <button type="submit">Отправить</button>
+    </form>
+  </div>
+</div>
+<button><img src="" alt=""></button>
     <section>
         <div class="container">
             <div class="cards flex">
@@ -49,7 +63,6 @@
                         </div>
                         <div class="info">
                             <div class="card_txt">Привет, меня  зовут Гуланда Токонова . Мне 16 хоть я и заканчиваю 11 класс. Учусь в лицее имени Токтогула Сатылганова , на профиле физмат. Увлекаюсь рисованием, вязанием , волейболом и т.д .  Люблю смотреть аниме , особенно полнометражные.`  
-
                             </div>
                             <div class="inner color-white">
                             </div>
@@ -138,5 +151,6 @@
                 </div>
             </div>
     </section>
+    <script src="js/core.js"></script>
 </body>
 </html>
