--- a/index.html
+++ b/index.html
@@ -164,5 +164,48 @@
                 </div>
             </div>
     </section>
+
+    <section class="progress">
+        <div class="container">
+            <div class="rating">
+                <div class="skill">
+                    <div class="percend">
+                        <div class="first-per flex">
+                            <div class="sie animate no-round" style="--p:90;--c:rgb(248, 40, 190);--b:4px">
+                                <div id="out-1" class="counter" data-to="10" data-stop="0">0</div>
+                            </div>
+                        </div>
+                        <div class="years">Товары которые мы обменяли</div>
+                    </div>
+                    <div class="percend">
+                        <div class="sec_per flex">
+                            <div class="sie animate no-round" style="--p:78;--c:rgb(245, 47, 110);--b:4px">
+                                <div class="counter" data-to="45" data-stop="0">0</div>
+                            </div>
+                        </div>
+                        <div class="years">Пользователи</div>
+                    </div>
+                    <div class="percend">
+                        <div class="first-per flex">
+                            <div class="sie animate no-round" style="--p:85;--c:rgb(90, 135, 252);--b:4px">
+                                <div class="counter" data-to="540" data-stop="0">0</div>
+                                <p class="znak">+</p>
+                            </div>
+                        </div>
+                        <div class="years"></div>
+                    </div>
+                    <div class="percend">
+                        <div class="sec_per flex">
+                            <div class="sie animate no-round" style="--p:100;--c:rgb(3, 206, 164);--b:4px">
+                                <div class="counter" data-to="100" data-stop="0">0</div>
+                                <p class="znak">%</p>
+                            </div>
+                        </div>
+                        <div class="years">Счастливые клиенты</div>
+                    </div>
+
+                </div>
+    </section>
+    <script src="./js/core.js"></script>
 </body>
 </html>
