added two button

--- a/index.html
+++ b/index.html
@@ -41,16 +41,18 @@
         <div class="container">
             <div class="eot_main flex">
                 <div class="main_right">
-                    <div class="main_txt">
+                    <div class="main_text">
                             <h2 class="tit">Отдавай чтобы</h2>
-                              <p class="txt">получать эмоции,</p>
-                              <p class="txt">получать нужные вещи,</p>
-                              <p class="txt">меняться и менять мир,</p>
-                              <p class="txt">получать подарки от партнеров.</p>
+                              <ul>
+                                <li class="txt">получать эмоции</li>
+                                <li class="txt">получать нужные вещи</li>
+                                <li class="txt">меняться и менять мир</li>
+                                <li class="txt">получать подарки от партнеров</li>
+                              </ul>
                     </div>
-                    <div class="main_btn flex">
-                        <a href="#" class="btn btn__eot"><span>отдать</span></a>
-                        <a href="#" class="btn btn__eot"><span>забрать</span></a>
+                    <div class="d_flex" role="search">
+                        <button class="btn btn-success rounded-pill px-3" type="button">Взять</button>
+                        <button class="btn btn-success rounded-pill px-3" type="button">Отдать</button>
                     </div>
                 </div>
                 <div class="main_left">
